s20-
λ▶<83 s17i3: /janinaj/semrep-py> mv an.tmp an1.mtp
λ▶<84 s17i3: /janinaj/semrep-py> mv an1.mtp an1.tmp
λ▶<85 s17i3: /janinaj/semrep-py> r.sh
PMID: None,Title: None
len:text:139,doc:21
lookup:Sex:[Sex]
lookup:Sex hormone:[Sex hormone]
lookup:Sex hormone concentrations:[Sex hormone concentrations]
lookup:concentrations in:[concentrations in]
lookup:in:[in]
lookup:in patients:[in patients]
lookup:patients with:[patients with]
lookup:with:[with]
lookup:with rheumatoid:[with rheumatoid]
lookup:rheumatoid arthritis:[rheumatoid arthritis]
lookup:rheumatoid arthritis are:[rheumatoid arthritis are]
lookup:are not:[are not]
lookup:not:[not]
lookup:not normalized:[not normalized]
lookup:normalized during:[normalized during]
lookup:during:[during]
lookup:during 12:[during 12]
lookup:12 weeks:[12 weeks]
lookup:weeks:[weeks]
lookup:weeks of:[weeks of]
lookup:of anti-tumor:[of anti tumor]
lookup:anti-tumor:[anti tumor]
lookup:anti-tumor necrosis:[anti tumor necrosis]
lookup:necrosis:[necrosis]
lookup:necrosis factor:[necrosis factor]
lookup:factor therapy:[factor therapy]
lookup:therapy:[therapy]
lookup:therapy.:[therapy]
annotate:<class 'str'>
annotate:0,,11,,C0036884,,Gonadal Steroid Hormones,,sex hormone,,833.3333333333334,,horm::phsu,,tmod::tmod,,;;12,,14,,C0086045,,Mental concentration,,concentrations,,833.3333333333334,,menp,,phys,,;;30,,8,,C0030705,,Patients,,patients,,833.3333333333334,,podg,,livb,,;;44,,20,,C0003873,,Rheumatoid Arthritis,,rheumatoid arthritis,,833.3333333333334,,dsyn,,diso,,;;69,,3,,C1518422,,Negation,,not,,833.3333333333334,,ftcn,,conc,,;;94,,5,,C0439230,,week,,weeks,,833.3333333333334,,tmco,,conc,,;;108,,5,,C3273930,,Tumor Mass,,tumor,,833.3333333333334,,fndg,,diso,,C1578706,,Specimen Source Codes - tumor,,tumor,,833.3333333333334,,inpr,,conc,,C0027651,,Neoplasms,,tumor,,833.3333333333334,,neop,,diso,,;;114,,8,,C1334928,,Necrotic changes (finding),,necrosis,,833.3333333333334,,fndg,,diso,,C0027540,,Necrosis,,necrosis,,833.3333333333334,,ortf,,phys,,;;123,,6,,C1521761,,Factor,,factor,,833.3333333333334,,ftcn,,conc,,C2827422,,Mathematical Factor,,factor,,833.3333333333334,,cnce,,conc,,;;130,,7,,C1363945,,Therapy Object (animal model),,therapy,,833.3333333333334,,fndg,,diso,,C0087111,,Therapeutic procedure,,therapy,,833.3333333333334,,topp,,tmod,,C0039798,,therapeutic aspects,,therapy,,833.3333333333334,,ftcn,,conc,,;;
multiprocessing.pool.RemoteTraceback: 
"""
Traceback (most recent call last):
  File "/usr/lib/python3.8/multiprocessing/pool.py", line 125, in worker
    result = (True, func(*args, **kwds))
  File "/var/www/html/n/ff/is/src/janinaj/semrep-py/metamaplite.py", line 18, in annotate
    ad=eval(annotations)
  File "<string>", line 1
    0,,11,,C0036884,,Gonadal Steroid Hormones,,sex hormone,,833.3333333333334,,horm::phsu,,tmod::tmod,,;;12,,14,,C0086045,,Mental concentration,,concentrations,,833.3333333333334,,menp,,phys,,;;30,,8,,C0030705,,Patients,,patients,,833.3333333333334,,podg,,livb,,;;44,,20,,C0003873,,Rheumatoid Arthritis,,rheumatoid arthritis,,833.3333333333334,,dsyn,,diso,,;;69,,3,,C1518422,,Negation,,not,,833.3333333333334,,ftcn,,conc,,;;94,,5,,C0439230,,week,,weeks,,833.3333333333334,,tmco,,conc,,;;108,,5,,C3273930,,Tumor Mass,,tumor,,833.3333333333334,,fndg,,diso,,C1578706,,Specimen Source Codes - tumor,,tumor,,833.3333333333334,,inpr,,conc,,C0027651,,Neoplasms,,tumor,,833.3333333333334,,neop,,diso,,;;114,,8,,C1334928,,Necrotic changes (finding),,necrosis,,833.3333333333334,,fndg,,diso,,C0027540,,Necrosis,,necrosis,,833.3333333333334,,ortf,,phys,,;;123,,6,,C1521761,,Factor,,factor,,833.3333333333334,,ftcn,,conc,,C2827422,,Mathematical Factor,,factor,,833.3333333333334,,cnce,,conc,,;;130,,7,,C1363945,,Therapy Object (animal model),,therapy,,833.3333333333334,,fndg,,diso,,C0087111,,Therapeutic procedure,,therapy,,833.3333333333334,,topp,,tmod,,C0039798,,therapeutic aspects,,therapy,,833.3333333333334,,ftcn,,conc,,;;
      ^
SyntaxError: invalid syntax
"""

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "main.py", line 771, in <module>
    process_directory(args.input_file_format, args.input_path, args.output_path)
  File "main.py", line 687, in process_directory
    process_file(input_file_format, os.path.join(input_dir_path, filename), output_dir_path, False)
  File "main.py", line 710, in process_file
    process_text(doc.abstract)
  File "main.py", line 497, in process_text
    concepts = referential_analysis(text)
  File "main.py", line 95, in referential_analysis
    annotations[ontology.__name__] = processes[ontology.__name__].get()
  File "/usr/lib/python3.8/multiprocessing/pool.py", line 771, in get
    raise self._value
  File "<string>", line 1
    0,,11,,C0036884,,Gonadal Steroid Hormones,,sex hormone,,833.3333333333334,,horm::phsu,,tmod::tmod,,;;12,,14,,C0086045,,Mental concentration,,concentrations,,833.3333333333334,,menp,,phys,,;;30,,8,,C0030705,,Patients,,patients,,833.3333333333334,,podg,,livb,,;;44,,20,,C0003873,,Rheumatoid Arthritis,,rheumatoid arthritis,,833.3333333333334,,dsyn,,diso,,;;69,,3,,C1518422,,Negation,,not,,833.3333333333334,,ftcn,,conc,,;;94,,5,,C0439230,,week,,weeks,,833.3333333333334,,tmco,,conc,,;;108,,5,,C3273930,,Tumor Mass,,tumor,,833.3333333333334,,fndg,,diso,,C1578706,,Specimen Source Codes - tumor,,tumor,,833.3333333333334,,inpr,,conc,,C0027651,,Neoplasms,,tumor,,833.3333333333334,,neop,,diso,,;;114,,8,,C1334928,,Necrotic changes (finding),,necrosis,,833.3333333333334,,fndg,,diso,,C0027540,,Necrosis,,necrosis,,833.3333333333334,,ortf,,phys,,;;123,,6,,C1521761,,Factor,,factor,,833.3333333333334,,ftcn,,conc,,C2827422,,Mathematical Factor,,factor,,833.3333333333334,,cnce,,conc,,;;130,,7,,C1363945,,Therapy Object (animal model),,therapy,,833.3333333333334,,fndg,,diso,,C0087111,,Therapeutic procedure,,therapy,,833.3333333333334,,topp,,tmod,,C0039798,,therapeutic aspects,,therapy,,833.3333333333334,,ftcn,,conc,,;;
      ^
SyntaxError: invalid syntax
λ▶<86 s17i3: /janinaj/semrep-py> 
 
